<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/TotalQuestions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baby_blue"
    android:gravity="center_horizontal"

    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/justbubble"

        android:text="@string/test_your_chinese"
        android:textColor="@color/nicegreen"
        android:textSize="45sp"

        />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="112dp"
        android:layout_height="86dp"
        android:translationY="-5dp"
        app:srcCompat="@drawable/picttpng" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_questions"
        android:fontFamily="@font/justbubble"
        android:textSize="22dp"
        android:textColor="@color/yellow"
        android:translationY="-45dp"
        android:translationX="-105dp"/>

    <TextView
        android:id="@+id/textViewyouscore"
        android:layout_width="99dp"
        android:layout_height="30dp"
        android:fontFamily="@font/justbubble"
        android:text="@string/your_scoreTXT"
        android:textColor="@color/yellow"
        android:textSize="22sp"
        android:translationX="120dp"
        android:translationY="-65dp" />

    <TextView
        android:id="@+id/totalQuestionsN"
        android:layout_width="56dp"
        android:layout_height="22dp"
        android:text="@string/tot"
        android:textSize="27sp"
        android:translationY="-50dp"
        android:translationX="-90dp"
        android:textColor="@color/nicegreen"
        android:fontFamily="@font/justbubble"/>

    <TextView
        android:id="@+id/textViewscore"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:fontFamily="@font/justbubble"
        android:text="@string/score"
        android:textColor="@color/nicegreen"
        android:textSize="27sp"
        android:translationX="110dp"
        android:translationY="-70dp" />

    <RadioGroup
        android:id="@+id/options_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/questionsTxtV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="18dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/justbubble"
        android:text="@string/q"
        android:textColor="@color/REDISH"
        android:textSize="30sp"
        android:translationX="23dp"
        android:translationY="-60dp" />

    <RadioGroup
        android:id="@+id/button_group"
        android:layout_width="396dp"
        android:layout_height="81dp"
        android:translationY="-60dp">

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:translationX="40dp"
            android:translationY="-5dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/justbubble"
                android:text="@string/gou"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/justbubble"
                android:text="@string/mao"
                android:textSize="18dp" />
        </LinearLayout>

    </RadioGroup>

    <Button
        android:id="@+id/Submit_button"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/justbubble"
        android:text="@string/submit"
        android:translationY="-80dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="260dp"
        android:layout_height="255dp"
        android:scaleType="fitStart"
        android:translationX="17dp"
        android:translationY="-70dp"
        app:srcCompat="@drawable/picpng" />




</LinearLayout>